add username in kbase.yml

--- a/kbase.yml
+++ b/kbase.yml
@@ -11,5 +11,5 @@ module-version:
     1.2.4
 
 owners:
-    [jjeffryes, jkbaumohl, cnelson, slebras]
+    [jjeffryes, jkbaumohl, cnelson, slebras, zimingy]
 
