Remove ftp_url parameter for fasta upload
Unused in kbaseland, and since it always puts downloaded files in the
scratch root, is subject to race conditions if parallelized.

There's also an argument to be made that each individual app shouldn't
have its own dowload code

--- a/kbase.yml
+++ b/kbase.yml
@@ -8,8 +8,8 @@ service-language:
     python
 
 module-version:
-    1.2.6
+    2.0.0
 
 owners:
-    [jjeffryes, jkbaumohl, cnelson, slebras, zimingy]
+    [jkbaumohl, zimingy, gaprice]
 
